# goit-web-7

./: README.md  alembic.ini  models.py  my_select.py  pyproject.toml  seed.py  seeds.py  some_db.db
alembic/versions/: 16e062c95f29_init.py
