[tool.poetry]
name = "main"
version = "0.1.1"
description = ""
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
SQLAlchemy = "^2.0.29"
faker = "^25.0.1"
alembic = "^1.13.1"
argparse = "^1.4.0"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
